make hegel a feature rather than runtime flag

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ chromiumoxide = "0.8.0"
 clap = { version = "4.5.46", features = ["derive"] }
 env_logger = "0.11.8"
 futures = "0.3.31"
-hegel = { path = "../star/hegel/sdks/rust" }
+hegel = { path = "../star/hegel/sdks/rust", optional = true }
 http = "1.4.0"
 include_dir = "0.7.4"
 log = "0.4.29"
@@ -30,3 +30,7 @@ url = "2.5.7"
 [dev-dependencies]
 
 [build-dependencies]
+
+[features]
+default = []
+hegel = ["dep:hegel"]
