--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,8 @@ tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 url = "2.5.7"
 http-body-util = "0.1.3"
 const_format = "0.2.35"
+html5ever = "0.37.1"
+bytes = "1.11.0"
 
 [build-dependencies]
 glob = "0.3.3"
