implement LTL verifier
This replaces the original TypeScript experiment with a pure-Rust
evaluator and verifier for the new Bombadil specification language.
It provides TypeScript and Javascript support, evaluating the properties
in specifications step-wise using the `boa_engine` runtime.

Specification authors may define their own properties, or import default
properties from `bombadil/defaults`. Any exported properties in the
top-level specification module are loaded and checked by Bombadil.

Here's a sample specification that can be used as a starting point:

```
export * from "bombadil/defaults";
```

--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -7,7 +7,9 @@
     // Environment Settings
     "module": "nodenext",
     "target": "esnext",
-    "types": ["dom"],
+    "types": [],
+
+    "lib": ["es2021", "dom"],
 
     // Other Outputs
     "sourceMap": true,
