--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ html5ever = "0.36.1"
 bytes = "1.11.0"
 base64 = "0.22.1"
 markup5ever_rcdom = "0.36.0"
+boa_engine = "0.21.0"
 
 [build-dependencies]
 glob = "0.3.3"
