--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,28 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: nixbuild/nix-quick-install-action@v34
-      - name: Restore and save Nix store
-        uses: nix-community/cache-nix-action@v6
+      - uses: cachix/cachix-action@v15
         with:
-          # restore and save a cache using this key
-          primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', '**/flake.lock') }}
-          # if there's no cache hit, restore a cache by this prefix
-          restore-prefixes-first-match: nix-${{ runner.os }}-
-          # collect garbage until the Nix store size (in bytes) is at most this number
-          # before trying to save a new cache
-          # 1G = 1073741824
-          gc-max-store-size-linux: 1G
-          # do purge caches
-          purge: true
-          # purge all versions of the cache
-          purge-prefixes: nix-${{ runner.os }}-
-          # created more than this number of seconds ago
-          purge-created: 0
-          # or last accessed this duration (ISO 8601 duration format)
-          # before the start of the `Post Restore and save Nix store` phase
-          purge-last-accessed: P1DT12H
-          # except any version with the key that is the same as the `primary-key`
-          purge-primary-key: never
+          name: bombadil
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
 
       - run: nix config show
       - run: nix build .
