--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,8 @@ futures = "0.3.31"
 http = "1.4.0"
 include_dir = "0.7.4"
 log = "0.4.29"
-oxc = "0.82.3"
-oxc_codegen = "0.82.3"
-oxc_semantic = "0.82.3"
-oxc_sourcemap = "4.1.0"
-oxc_traverse = "0.82.3"
+oxc = { version = "0.112.0", features = ["codegen", "semantic", "transformer"] }
+oxc_traverse = "0.112.0"
 rand = "0.9.2"
 rand_chacha = "0.9.0"
 serde_json = "1.0.145"
