--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,5 +48,6 @@ glob = "0.3.3"
 axum = "0.8.8"
 indoc = "2.0.7"
 insta = "1.43.1"
+proptest = "1.10.0"
 tower = "0.5.2"
 tower-http = { version = "0.6.8", features = ["fs"] }
