--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,9 +99,30 @@ jobs:
           name: bombadil-types
           path: bombadil-types.tar.gz
 
+  smoke-test:
+    name: Smoke test (${{ matrix.os }})
+    needs: build
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            artifact: bombadil-x86_64-linux
+          - os: macos-latest
+            artifact: bombadil-aarch64-darwin
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ matrix.artifact }}
+
+      - name: Test binary runs without Nix
+        run: |
+          chmod +x bombadil
+          ./bombadil --version
+
   release:
     if: startsWith(github.ref, 'refs/tags/v')
-    needs: [check-version, build, build-types]
+    needs: [check-version, build, build-types, smoke-test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v4
