--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,8 +117,8 @@ jobs:
 
       - name: Test binary runs without Nix
         run: |
-          chmod +x bombadil
-          ./bombadil --version
+          chmod +x ${{ matrix.artifact }}
+          ./${{ matrix.artifact }} --version
 
   release:
     if: startsWith(github.ref, 'refs/tags/v')
