add action generators

--- a/src/specification/tsconfig.json
+++ b/src/specification/tsconfig.json
@@ -7,7 +7,8 @@
     "paths": {
       "@antithesishq/bombadil": ["./index.ts"],
       "@antithesishq/bombadil/defaults": ["./defaults.ts"],
-      "@antithesishq/bombadil/internal": ["./internal.ts"]
+      "@antithesishq/bombadil/internal": ["./internal.ts"],
+      "@antithesishq/bombadil/actions": ["./actions.ts"]
     },
 
     // Environment Settings
