--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ tempfile = "3.22.0"
 tokio = { version = "1.48.0", features = ["full"] }
 tokio-stream = { version = "0.1.17", features = ["sync"] }
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
-url = "2.5.7"
+url = { version = "2.5.7", features = ["serde"] }
 http-body-util = "0.1.3"
 const_format = "0.2.35"
 html5ever = "0.36.1"
