add tests for more complicated random_range function

--- a/src/specification/tsconfig.json
+++ b/src/specification/tsconfig.json
@@ -10,6 +10,7 @@
       "@antithesishq/bombadil/defaults/actions": ["./defaults/actions.ts"],
       "@antithesishq/bombadil/defaults/properties": ["./defaults/properties.ts"],
       "@antithesishq/bombadil/internal": ["./internal.ts"],
+      "@antithesishq/bombadil/random": ["./random.ts"],
       "@antithesishq/bombadil/actions": ["./actions.ts"]
     },
 
