add action generators to specification language (#36)
This ports the action generator system from hardcoded Rust to a user
land TypeScript system, where the Bombadil defaults modules provide a
set of reasonable action generators, and where users can extend the set
of possible actions from within their specifications.

--- a/src/specification/tsconfig.json
+++ b/src/specification/tsconfig.json
@@ -7,7 +7,11 @@
     "paths": {
       "@antithesishq/bombadil": ["./index.ts"],
       "@antithesishq/bombadil/defaults": ["./defaults.ts"],
-      "@antithesishq/bombadil/internal": ["./internal.ts"]
+      "@antithesishq/bombadil/defaults/actions": ["./defaults/actions.ts"],
+      "@antithesishq/bombadil/defaults/properties": ["./defaults/properties.ts"],
+      "@antithesishq/bombadil/internal": ["./internal.ts"],
+      "@antithesishq/bombadil/random": ["./random.ts"],
+      "@antithesishq/bombadil/actions": ["./actions.ts"]
     },
 
     // Environment Settings
