custom theme and better multi-page setup

--- a/docs/manual/Makefile
+++ b/docs/manual/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all html epub pdf txt clean
+.PHONY: all html epub pdf txt clean serve watch dev
 
 SRC_DIR := src
 TARGET_DIR := target
@@ -13,8 +13,9 @@ TXT_FILE := $(TARGET_DIR)/bombadil-manual.txt
 
 # Pandoc options
 PANDOC := pandoc
-PANDOC_HTML_OPTS := --to=chunkedhtml --toc --toc-depth=3 --number-sections \
-	--split-level=2 --resource-path=$(SRC_DIR)
+PANDOC_HTML_OPTS := --to=chunkedhtml --toc --toc-depth=3 \
+	--split-level=1 --resource-path=$(SRC_DIR) --css=reset.css --css=style.css \
+	--template=$(SRC_DIR)/template.html
 PANDOC_EPUB_OPTS := --toc --toc-depth=3 --number-sections \
 	--epub-metadata=$(SRC_DIR)/metadata.yaml --resource-path=$(SRC_DIR)
 PANDOC_PDF_OPTS := --toc --toc-depth=3 --number-sections \
@@ -36,9 +37,10 @@ $(TARGET_DIR):
 
 # For chunked HTML, pandoc creates the directory itself
 # Remove it first if it exists, then let pandoc create it
-$(HTML_DIR)/.built: $(SOURCES) | $(TARGET_DIR)
+$(HTML_DIR)/.built: $(SOURCES) $(SRC_DIR)/template.html $(wildcard $(SRC_DIR)/*.css) | $(TARGET_DIR)
 	rm -rf $(HTML_DIR)
 	$(PANDOC) $(SOURCES) --output $(HTML_DIR)/ $(PANDOC_HTML_OPTS)
+	cp $(SRC_DIR)/*.css $(HTML_DIR)/
 	touch $(HTML_DIR)/.built
 
 $(EPUB_FILE): $(SOURCES) | $(TARGET_DIR)
@@ -53,6 +55,16 @@ $(TXT_FILE): $(SOURCES) | $(TARGET_DIR)
 clean:
 	rm -rf $(TARGET_DIR)
 
-# Development server (if python is available)
+# Development server with live reload
 serve: html
-	@cd $(HTML_DIR) && python3 -m http.server 8000 || echo "Python not available for serving"
+	@browser-sync start --server $(HTML_DIR) --port 8000 --no-open
+
+# Watch for changes and rebuild
+watch:
+	watchexec -w $(SRC_DIR) -e md,css,html,yaml make html
+
+# Development mode: rebuild and serve with live reload
+dev: clean all
+	@concurrently -n serve,watch \
+		"browser-sync start --server $(HTML_DIR) --port 8000 --no-open --files '$(HTML_DIR)/**/*'" \
+		"watchexec -w $(SRC_DIR) -e css,html,md,yaml make html"
