fix fonts in pdf again

--- a/docs/manual/Makefile
+++ b/docs/manual/Makefile
@@ -37,15 +37,14 @@ PANDOC_PDF_OPTS := --toc --toc-depth=3 \
 	--lua-filter=$(SRC_DIR)/admonitions.lua \
 	--lua-filter=$(SRC_DIR)/bash-prompt.lua \
 	--lua-filter=$(SRC_DIR)/table-nowrap.lua \
-	--lua-filter=$(SRC_DIR)/inline-code-size.lua \
-	--highlight-style=monochrome \
+	--listings \
 	-V mainfont="IBM Plex Sans Condensed" \
 	-V mainfontoptions="BoldFont=IBMPlexSansCondensed-SemiBold.otf" \
 	-V monofont="IBM Plex Mono" \
 	-M version=$(VERSION) \
 	-V subtitle="Version $(VERSION)" \
 	-V geometry="margin=1in" \
-	-V header-includes='\usepackage{fontawesome5}\usepackage{relsize}\usepackage{xcolor}\definecolor{admonitionblue}{HTML}{286486}\definecolor{admonitionyellow}{HTML}{944927}\definecolor{admonitioncyan}{HTML}{3B8992}\definecolor{admonitionred}{HTML}{A8334C}\usepackage{fancyvrb}\fvset{fontsize=\relscale{0.95},xleftmargin=2em}\usepackage{etoolbox}\BeforeBeginEnvironment{Verbatim}{\vspace{1em}}\AfterEndEnvironment{Verbatim}{\vspace{1em}}\usepackage{tcolorbox}\newtcolorbox{admonitionblue}{colback=white,colframe=admonitionblue,boxrule=0.5pt,leftrule=4pt,arc=0pt,left=8pt,right=8pt,top=6pt,bottom=6pt,before skip=1em,after skip=1em}\newtcolorbox{admonitionyellow}{colback=white,colframe=admonitionyellow,boxrule=0.5pt,leftrule=4pt,arc=0pt,left=8pt,right=8pt,top=6pt,bottom=6pt,before skip=1em,after skip=1em}\newtcolorbox{admonitioncyan}{colback=white,colframe=admonitioncyan,boxrule=0.5pt,leftrule=4pt,arc=0pt,left=8pt,right=8pt,top=6pt,bottom=6pt,before skip=1em,after skip=1em}\newtcolorbox{admonitionred}{colback=white,colframe=admonitionred,boxrule=0.5pt,leftrule=4pt,arc=0pt,left=8pt,right=8pt,top=6pt,bottom=6pt,before skip=1em,after skip=1em}\usepackage{listings}\usepackage{fancyhdr}\pagestyle{fancy}\fancyhf{}\fancyhead[L]{The Bombadil Manual v$(VERSION)}\fancyhead[R]{\leftmark}\fancyfoot[C]{\thepage}\usepackage{titling}\pretitle{\begin{center}\LARGE\bfseries}\posttitle{\par\end{center}}'
+	-V header-includes='\usepackage{fontawesome5}\usepackage{xcolor}\definecolor{admonitionblue}{HTML}{286486}\definecolor{admonitionyellow}{HTML}{944927}\definecolor{admonitioncyan}{HTML}{3B8992}\definecolor{admonitionred}{HTML}{A8334C}\usepackage{listings}\lstset{basicstyle=\ttfamily,columns=fullflexible,keepspaces=true,showstringspaces=false,xleftmargin=2em,aboveskip=1em,belowskip=1em,breaklines=true,breakatwhitespace=false,frame=none,postbreak=\mbox{\textcolor{gray}{\tiny\ensuremath{\hookrightarrow}}\space}}\usepackage{tcolorbox}\newtcolorbox{admonitionblue}{colback=white,colframe=admonitionblue,boxrule=0.5pt,leftrule=4pt,arc=0pt,left=8pt,right=8pt,top=6pt,bottom=6pt,before skip=1em,after skip=1em}\newtcolorbox{admonitionyellow}{colback=white,colframe=admonitionyellow,boxrule=0.5pt,leftrule=4pt,arc=0pt,left=8pt,right=8pt,top=6pt,bottom=6pt,before skip=1em,after skip=1em}\newtcolorbox{admonitioncyan}{colback=white,colframe=admonitioncyan,boxrule=0.5pt,leftrule=4pt,arc=0pt,left=8pt,right=8pt,top=6pt,bottom=6pt,before skip=1em,after skip=1em}\newtcolorbox{admonitionred}{colback=white,colframe=admonitionred,boxrule=0.5pt,leftrule=4pt,arc=0pt,left=8pt,right=8pt,top=6pt,bottom=6pt,before skip=1em,after skip=1em}\usepackage{fancyhdr}\pagestyle{fancy}\fancyhf{}\fancyhead[L]{The Bombadil Manual v$(VERSION)}\fancyhead[R]{\leftmark}\fancyfoot[C]{\thepage}\usepackage{titling}\pretitle{\begin{center}\LARGE\bfseries}\posttitle{\par\end{center}}'
 PANDOC_TXT_OPTS := --to plain --wrap=none --lua-filter=$(SRC_DIR)/table-nowrap.lua
 PANDOC_MAN_OPTS := --standalone --to man -M section=1 -M title=bombadil --lua-filter=$(SRC_DIR)/table-nowrap.lua
 
