temp deploy job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 on:
   pull_request:
   push:
-    branches: [main]
+    branches: [main, docs-site]  # TEMPORARY: Remove docs-site before merging
 
 jobs:
   build:
@@ -57,3 +57,30 @@ jobs:
         with:
           name: bombadil-manual
           path: result/
+
+  # TEMPORARY: Deploy manual to GitHub Pages for preview
+  # DELETE THIS JOB BEFORE MERGING
+  deploy-manual:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    name: Deploy Manual to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: manual
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Download manual artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: bombadil-manual
+          path: manual
+      - name: Upload to GitHub Pages
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: manual/html
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
