--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 on:
   pull_request:
   push:
-    branches: [main, docs-site]  # TEMPORARY: Remove docs-site before merging
+    branches: [main]
 
 jobs:
   build:
@@ -55,7 +55,7 @@ jobs:
       - name: Upload manual
         uses: actions/upload-artifact@v4
         with:
-          name: bombadil-manual
+          name: bombadil-manual.zip
           path: result/
 
   # TEMPORARY: Deploy manual to GitHub Pages for preview
@@ -68,19 +68,18 @@ jobs:
     name: Deploy Manual to GitHub Pages
     runs-on: ubuntu-latest
     needs: manual
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Download manual artifact
         uses: actions/download-artifact@v4
         with:
-          name: bombadil-manual
+          name: bombadil-manual.zip
           path: manual
       - name: Upload to GitHub Pages
+        if: github.event_name == 'push'
         uses: actions/upload-pages-artifact@v3
         with:
           path: manual/html
       - name: Deploy to GitHub Pages
         id: deployment
+        if: github.event_name == 'push'
         uses: actions/deploy-pages@v4
